begin work on validation of constraints in function/method calls. Deprecate old classes